# PyLZS-personal

./: .gitignore  README.md  pyproject.toml  setup.py
src/: bitstream.c  bitstream.h  lzs_compress.c  lzs_compress.h  lzs_decompress.c  lzs_decompress.h  lzsmodule.c  lzsmodule.h
